# marginalia

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  HANDOVER.md  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
.github/workflows/: release.yml
bridge/: book_finder.py  bookorbit_source.py  cli.py  com.marginalia.bridge.plist  com.sam.marginalia.plist  com.sam.piread-bridge.plist  install.sh  marginalia.service  monitor.py  pi_session.py  pi_xray.py  rag.py  series.py  server.py  setup_wizard.py  xray_cache.py  xray_generator.py
docs/: calibre.md  obsidian.md  providers.md  setup.md
marginalia.koplugin/: _meta.lua  bridge.lua  main.lua  marginalia_async.lua  marginalia_cache.lua  marginalia_context.lua  marginalia_queue.lua  marginalia_xray.lua
piread.koplugin/: _meta.lua  bridge.lua  main.lua  piread_async.lua  piread_context.lua  piread_queue.lua  piread_xray.lua
tests/: conftest.py  test_epub_extract.py  test_mentions.py  test_series.py  test_server_routes.py  test_setup_wizard.py  test_vault_notes.py  test_xray_cache.py  test_xray_generator.py
tools/: adb_ocr.py
